[package]
name = "methix"
version = "0.1.0"
authors = ["mathiasmagnusson <mathiasmagnussons@gmail.com>"]
edition = "2018"

[package.metadata.bootimage]
default-target = "x86_64-target.json"

[dependencies]
bootloader = "0.3"
lazy_static = { version = "1.2", features = ["spin_no_std"] }
spin = "0.5"
uart_16550 = "0.1"
